flowc/tests/fixtures/check_e124_suggestion_field.flow
type Plan = { cost: int }

flow choose([Plan]) -> [Plan] {
  picked = it | select cst
  picked
}
